DDF-3460 Address Sonarqube findings (#2713)